<resources>
    <string name="app_name">LivestockFinder1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="olayemexcel_app">Olayemexcel App</string>
    <string name="livestock_finder">Livestock Finder</string>
    <string name="dashboard_screen">Dashboard Screen</string>
    <string name="discover_your_favourite_livestock">Discover Your Favourite Livestock!</string>
    <string name="we_have_the_widest_livestock_locations_across_the_world_waiting_for_your_grab">We have the widest livestock locations across the World, waiting for your grab..</string>
    <string name="get_started">Get Started</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="forget_password">FORGET PASSWORD?</string>
    <string name="new_user_sign_up">New User? SIGN UP</string>
    <string name="login">LOGIN</string>
    <string name="sign_in_to_continue">Sign In to continue</string>
    <string name="hello_there_welcome_back">Hello there, Welcome Back</string>
    <string name="log">LOGIN</string>
    <string name="welcome">Welcome</string>
    <string name="signup_to_start_your_new_journey">SignUp to start your new Journey</string>
    <string name="full_name">Full Name</string>
    <string name="signup_to_start_your_new_journey1">Click above to upload image</string>
    <string name="user_name">Username</string>
    <string name="user_name1">Username</string>
    <string name="username1">Username</string>
    <string name="full_name1">Full Name</string>
    <string name="email">Email</string>
    <string name="phone_no">Phone No</string>
    <string name="password1">Password</string>
    <string name="signup">SignUp</string>
    <string name="already_have_an_account_login">Already have an account? LogIn</string>
    <string name="welcome1">Welcome</string>
    <string name="Username">olayemexcel</string>
    <string name="_50">50</string>
    <string name="pet_livestock">Pet Livestock</string>
    <string name="_200">200</string>
    <string name="other_livestock">Other Livestock</string>
    <string name="email2">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="_1_123_456789">+1-123-456789</string>
    <string name="Logout">Logout</string>
    <string name="update">Explore Here</string>
    <string name="profile_page">Profile page</string>
    <string name="full_name2">Full Name</string>
    <string name="olayemexcel_gmail_com">Olayemexcel@gmail.com</string>
    <string name="pass">**********</string>
    <string name="olayemexcel_app1">Olayemexcel App</string>
    <string name="verify_phone_no">FORGET PASSWORD</string>
    <string name="enter_verification_code_if_not_automatically_authenticated">Enter Your Valid Email to reset your password!</string>
    <string name="verify">RESET</string>
    <string name="special_breeds">Special Breeds</string>
    <string name="around_the_world">Around the World</string>
    <string name="track_now">Track Now</string>
    <string name="categories">Categories</string>
    <string name="popular">Popular</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="find_your_livestock">Find Your Livestock</string>
    <string name="logout">Logout</string>
    <string name="profile_page_home">Profile Page</string>
    <string name="loginForget">Login</string>
    <string name="privacy_policy"><![CDATA[Read Privacy Policy & Terms of Use]]></string>
    <string name="contin">Continue</string>
    <string name="privacyPol">Privacy Policy</string>
    <string name="privacyPo">Privacy Policy</string>
    <string name="privacytxt">All personal data and contact details will be treated with data privacy protection and compliance guidelines, and thereby collected for the purpose of this app only. All data for the user that no longer exist will be removed from our database.</string>
    <string name="terms">Terms of Use</string>
    <string name="termsof">The Services/use (all services/use available on this app: LivestockFinder) are guided by strict rule of not allowing any form of illegal operations, communication or transaction regarding livestock/pets on this platform, and no animals/pets that are not inline with the standard and quality of view for people, or health status should be posted, or acquired on this platform. Also any form of underage services are not allowed.</string>
    <string name="copy"><![CDATA[\u00A9 2023 All rights reserved]]></string>
</resources>