<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserProfile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="#EBFDFF"
            android:padding="20dp">

            <ImageView
                android:contentDescription="@string/app_name"
                android:id="@+id/profile_img"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerVertical="true"
                android:src="@drawable/profile_img" />

            <TextView
                android:id="@+id/prof_page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/profile_img"
                android:includeFontPadding="false"
                android:text="@string/profile_page"
                android:textColor="#003300"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/prof_des"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/prof_page"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/profile_img"
                android:includeFontPadding="false"
                android:text="@string/Username"
                android:textColor="#003300"
                android:textSize="11sp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-100dp"
            android:padding="20dp">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="125dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardBackgroundColor="#EBFDFF"
                app:cardElevation="10dp">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/pet_icon"
                        android:contentDescription="@string/app_name" />

                    <TextView
                        android:id="@+id/pet_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:includeFontPadding="false"
                        android:text="@string/_50"
                        android:textColor="#003300"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/pet_Descr"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/pet_label"
                        android:layout_centerHorizontal="true"
                        android:includeFontPadding="false"
                        android:text="@string/pet_livestock"
                        android:textColor="#003300"
                        android:textSize="20sp" />

                </RelativeLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="125dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardBackgroundColor="#EBFDFF"
                app:cardElevation="10dp">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp">

                    <ImageView
                        android:contentDescription="@string/app_name"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/livestock_icon" />

                    <TextView
                        android:id="@+id/gene_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:includeFontPadding="false"
                        android:text="@string/_200"
                        android:textColor="#003300"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/gene_Descr"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/gene_label"
                        android:layout_centerHorizontal="true"
                        android:includeFontPadding="false"
                        android:text="@string/other_livestock"
                        android:textColor="#003300"
                        android:textSize="14sp" />

                </RelativeLayout>
            </com.google.android.material.card.MaterialCardView>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/prof_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/full_name2"
                tools:ignore="ExtraText">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/user_small_icon1"
                    android:drawablePadding="10dp"
                     />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/prof_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/email2">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/mail_icon1"
                    android:drawablePadding="10dp"
                     />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/prof_phoneNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/phone_number">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/phone_icon"
                    android:drawablePadding="10dp"
                     />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/logoutbtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Logout"
                android:textSize="20sp"
                android:background="#00000000"/>



            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/prof_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#082C0A"
                android:text="@string/update"
                android:textSize="30sp"
                android:textStyle="italic"
                android:textColor="@color/white">

            </androidx.appcompat.widget.AppCompatButton>

        </LinearLayout>
    </LinearLayout>
</ScrollView>