<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Privacy1"
    android:background="#EBFDFF">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/privacyPo"
        android:textAlignment="center"
        android:textColor="#08300A"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_wrapBehaviorInParent="horizontal_only" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="233dp"
        android:layout_height="109dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/androidx_startup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo1" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:text="@string/privacytxt"
        android:textAlignment="center"
        android:textColor="#08300A"
        android:textSize="17sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />


    <TextView
        android:id="@+id/termshead"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/terms"
        android:textAlignment="center"
        android:textColor="#08300A"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_wrapBehaviorInParent="horizontal_only" />


    <TextView
        android:id="@+id/termstxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/termsof"
        android:textAlignment="center"
        android:textColor="#08300A"
        android:textSize="17sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/termshead" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttPrivacy"
        android:layout_width="220dp"
        android:layout_height="66dp"
        android:background="#0E270F"
        android:shadowRadius="30"
        android:text="@string/contin"
        android:textColor="#E3F1E4"
        android:textSize="30sp"
        app:cornerRadius="@dimen/cardview_compat_inset_shadow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/termstxt" />
</androidx.constraintlayout.widget.ConstraintLayout>