<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dashboard"
    android:background="#EBFDFF">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="93dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:text="@string/discover_your_favourite_livestock"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold"
        android:textColor="#08300A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_wrapBehaviorInParent="horizontal_only" />

    <ImageView
        android:id="@+id/imageView2"
        android:contentDescription="@string/androidx_startup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo1" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/we_have_the_widest_livestock_locations_across_the_world_waiting_for_your_grab"
        android:textAlignment="center"
        android:textSize="27sp"
        android:textStyle="italic"
        android:textColor="#08300A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="320dp"
        android:layout_height="86dp"
        android:layout_marginTop="70dp"
        android:background="#082C0A"
        android:shadowRadius="30"
        android:text="@string/get_started"
        android:textColor="#EBFDFF"
        android:textSize="34sp"
        app:cornerRadius="@dimen/cardview_compat_inset_shadow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />
</androidx.constraintlayout.widget.ConstraintLayout>