<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dashboard"
    android:background="#EBFDFF">

    <TextView
        android:id="@+id/textView3a"
        android:layout_width="0dp"
        android:layout_height="93dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:text="@string/verify_phone_no"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold"
        android:textColor="#08300A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2a"
        app:layout_wrapBehaviorInParent="horizontal_only" />

    <ImageView
        android:id="@+id/imageView2a"
        android:contentDescription="@string/androidx_startup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo1" />

    <TextView
        android:id="@+id/textView4a"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/enter_verification_code_if_not_automatically_authenticated"
        android:textAlignment="center"
        android:textSize="27sp"
        android:textStyle="italic"
        android:textColor="#08300A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3a" />


    <EditText
        android:id="@+id/resetemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:hint="Email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4a" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_margin="5dp"
        android:background="#00000000"
        android:elevation="0dp"
        android:text="@string/loginForget"
        android:textColor="#003300"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resetemail"
        tools:ignore="RtlHardcoded" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_a"
        android:layout_width="320dp"
        android:layout_height="46dp"
        android:layout_marginTop="5dp"
        android:background="#082C0A"
        android:shadowRadius="30"
        android:text="@string/verify"
        android:textColor="#EBFDFF"
        android:textSize="24sp"
        app:cornerRadius="@dimen/cardview_compat_inset_shadow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4a" />


    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_a" />

</androidx.constraintlayout.widget.ConstraintLayout>


